# packages/api/src/index.ts
@@ -7,6 +7,7 @@ import swaggerSpec from './config/swagger';
 import { errorHandler } from './middleware/errorHandler';
 import authRoutes from './routes/authRoutes';
 import profileRoutes from './routes/profileRoutes';
+import postRoutes from './routes/postRoutes';
 import type { ErrorRequestHandler } from 'express';
 
 async function startServer() {
@@ -46,7 +47,7 @@ async function startServer() {
 
   router.use('/auth', authRoutes);
   router.use('/profiles', profileRoutes);
-
+  router.use('/posts', postRoutes);
   app.use('/', router);
 
   // Add a health check endpoint
