# packages/shared/src/types/dtos/PostDto.ts
@@ -1,0 +1,7 @@
+export interface PostDto {
+  id: string;
+  profileId: string;
+  content: string;
+  createdAt: string;
+  updatedAt?: string;
+} 
